# roscon24

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
assets/hotdog/: bun.blend  bun.blend1  bun.dae  hotdog-with-mustard.blend  hotdog.blend  hotdog.blend1  mustard.dae  sausage.dae
assets/mustard-bottle/: mustard-bottle.blend  mustard-bottle.dae
docker/: README.md  build.sh  fetch  shell  start.sh  stop
docker/profile.d/: custom.sh
exercise1/: README.md
exercise1/src/exercise1-1/: CMakeLists.txt  package.xml
exercise1/src/exercise1-1/include/hot_dog_scenario/: hot_dog_scenario.hpp
exercise1/src/exercise1-1/launch/: exercise1-1.launch.py  moveit.rviz  ur.launch.py
exercise1/src/exercise1-1/solution/: main.cpp
exercise1/src/exercise1-1/src/: hot_dog_scenario.cpp  main.cpp
exercise1/src/exercise1-2/: CMakeLists.txt  package.xml
exercise1/src/exercise1-2/include/hot_dog_scenario/: hot_dog_scenario.hpp
exercise1/src/exercise1-2/include/motion_planning/: motion_planning.h
exercise1/src/exercise1-2/launch/: exercise1-2.launch.py  ur.launch.py
exercise1/src/exercise1-2/solution/: main.cpp
exercise1/src/exercise1-2/src/: hot_dog_scenario.cpp  main.cpp  motion_planning.cpp
exercise1/src/hot_dog/: CMakeLists.txt  package.xml
exercise1/src/hot_dog/include/hot_dog/: hot_dog_collision_object.hpp
exercise1/src/hot_dog/src/: hot_dog_collision_object.cpp  main.cpp
exercise1/src/moveit_planning/: CMakeLists.txt  package.xml
exercise1/src/moveit_planning/launch/: exercise1-1.launch.py  ur.launch.py
exercise1/src/moveit_planning/src/exercise1-1/: main.cpp
hotdog/: hotdog-with-mustard.blend  hotdog-with-mustard.blend1  hotdog.mtl
