<?xml version="1.0"?>
<package format="3">
    <name>moveit_planning</name>
    <version>0.0.1</version>
    <description>A MoveIt motion planning example</description>

    <maintainer email="stephanie@stephanieeng.ca">Stephanie Eng</maintainer>
    <author email="stephanie@stephanieeng.ca">Stephanie Eng</author>

    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>geometric_shapes</depend>
    <depend>moveit_msgs</depend>
    <depend>moveit_ros_planning_interface</depend>
    <depend>shape_msgs</depend>
    <depend>std_msgs</depend>
    <exec_depend>ur_moveit_config</exec_depend>
    <exec_depend>ur_robot_driver</exec_depend>
    <exec_depend>ur_description</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
